tests/transpiler/x/rs/substring_builtin.error
rustc: exit status 1
error[E0425]: cannot find function `substring` in this scope
 --> /workspace/mochi/tests/transpiler/x/rs/substring_builtin.rs:3:20
  |
3 |     println!("{}", substring("mochi", 1, 4));
  |                    ^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
